# parachute_drone

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: joint_names_parachute_drone.yaml
launch/: display.launch  gazebo.launch
meshes/: parachute_drone.STL  prop1.STL  prop2.STL
plugins/include/: pd_forces_and_moments.hpp
plugins/src/: joint_plugin.cpp  pd_forces_and_moments.cpp
src/: deneme.py  scenario.py
urdf/: parachute_drone.gazebo  parachute_drone.xacro
worlds/: parachute_drone.world
